--- a/front/src/App.css
+++ b/front/src/App.css
@@ -30,6 +30,11 @@
   color: #61dafb;
 }
 
+.content{
+  height: 600px;
+  margin: 10px auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
